Closed
Bug 1505949
Opened 7 years ago
Closed 7 years ago
layout/style/BorrowedTypeList.h content should remain on a single line
Categories
(Developer Infrastructure :: Lint and Formatting, defect)
Developer Infrastructure
Lint and Formatting
Tracking
(firefox-esr60 fixed, firefox65 fixed)
RESOLVED
FIXED
mozilla65
People
(Reporter: Sylvestre, Assigned: Sylvestre)
References
Details
Attachments
(2 files, 1 obsolete file)
|
47 bytes,
text/x-phabricator-request
|
Details | Review | |
|
789 bytes,
patch
|
Sylvestre
:
review+
lizzard
:
approval-mozilla-esr60+
|
Details | Diff | Splinter Review |
Otherwise, it fails with
[task 2018-11-08T16:04:43.835Z] 16:04:43 INFO - cargo:rerun-if-changed=/builds/worker/workspace/build/src/layout/style/ServoBindings.toml
[task 2018-11-08T16:04:43.836Z] 16:04:43 INFO - thread '<unnamed>' panicked at 'Unrecognized line in BorrowedTypeList.h: 'GECKO_BORROWED_TYPE_MUT(mozilla::AnimationPropertySegment,'', libcore/option.rs:1000:5
[task 2018-11-08T16:04:43.836Z] 16:04:43 INFO - stack backtrace:
[task 2018-11-08T16:04:43.836Z] 16:04:43 INFO - 0: 0x7f1f668d875e - std::sys::unix::backtrace::tracing::imp::unwind_backtrace::hf5316c67202e23c8
[task 2018-11-08T16:04:43.836Z] 16:04:43 INFO - at libstd/sys/unix/backtrace/tracing/gcc_s.rs:49
[task 2018-11-08T16:04:43.837Z] 16:04:43 INFO - 1: 0x7f1f668b1946 - std::sys_common::backtrace::print::h3068ed2a6dc7ac86
[task 2018-11-08T16:04:43.837Z] 16:04:43 INFO - at libstd/sys_common/backtrace.rs:71
[task 2018-11-08T16:04:43.837Z] 16:04:43 INFO - at libstd/sys_common/backtrace.rs:59
[task 2018-11-08T16:04:43.837Z] 16:04:43 INFO - 2: 0x7f1f668af54d - std::panicking::default_hook::{{closure}}::h1b9d29cc09d41897
[task 2018-11-08T16:04:43.837Z] 16:04:43 INFO - at libstd/panicking.rs:211
[task 2018-11-08T16:04:43.838Z] 16:04:43 INFO - 3: 0x7f1f668af2c0 - std::panicking::default_hook::h3a27b204a313406b
[task 2018-11-08T16:04:43.838Z] 16:04:43 INFO - at libstd/panicking.rs:227
[task 2018-11-08T16:04:43.838Z] 16:04:43 INFO - 4: 0x7f1f668afbfc - std::panicking::rust_panic_with_hook::h0e12cb2fc86d00fa
[task 2018-11-08T16:04:43.838Z] 16:04:43 INFO - at libstd/panicking.rs:477
[task 2018-11-08T16:04:43.838Z] 16:04:43 INFO - 5: 0x7f1f668af7b9 - std::panicking::continue_panic_fmt::h141671b29fe0e27d
[task 2018-11-08T16:04:43.839Z] 16:04:43 INFO - at libstd/panicking.rs:391
[task 2018-11-08T16:04:43.839Z] 16:04:43 INFO - 6: 0x7f1f668af6b5 - rust_begin_unwind
[task 2018-11-08T16:04:43.839Z] 16:04:43 INFO - at libstd/panicking.rs:326
[task 2018-11-08T16:04:43.839Z] 16:04:43 INFO - 7: 0x7f1f669285db - core::panicking::panic_fmt::h429a06507aba9228
[task 2018-11-08T16:04:43.839Z] 16:04:43 INFO - at libcore/panicking.rs:77
[task 2018-11-08T16:04:43.840Z] 16:04:43 INFO - 8: 0x7f1f66928671 - core::option::expect_failed::h4c79c3aae6612643
[task 2018-11-08T16:04:43.840Z] 16:04:43 INFO - at libcore/option.rs:1000
[task 2018-11-08T16:04:43.840Z] 16:04:43 INFO - 9: 0x557aaa55a545 - <core::iter::Map<I, F> as core::iter::iterator::Iterator>::next::hef8bb969c2e8a346
[task 2018-11-08T16:04:43.840Z] 16:04:43 INFO - 10: 0x557aaa560512 - build_script_build::build_gecko::bindings::get_types::h2e64e3a229ff2f7c
[task 2018-11-08T16:04:43.840Z] 16:04:43 INFO - 11: 0x557aaa5674e5 - build_script_build::build_gecko::bindings::generate_bindings::h06710a7a4b1dc497
[task 2018-11-08T16:04:43.841Z] 16:04:43 INFO - 12: 0x7f1f668ef469 - __rust_maybe_catch_panic
[task 2018-11-08T16:04:43.841Z] 16:04:43 INFO - at libpanic_unwind/lib.rs:103
[task 2018-11-08T16:04:43.841Z] 16:04:43 INFO - 13: 0x557aaa553e5b - <F as alloc::boxed::FnBox<A>>::call_box::hc78c33641832ec7a
[task 2018-11-08T16:04:43.841Z] 16:04:43 INFO - 14: 0x7f1f668dcc5a - std::sys_common::thread::start_thread::hb77935aee02382da
[task 2018-11-08T16:04:43.841Z] 16:04:43 INFO - at liballoc/boxed.rs:656
[task 2018-11-08T16:04:43.842Z] 16:04:43 INFO - at libstd/sys_common/thread.rs:24
[task 2018-11-08T16:04:43.842Z] 16:04:43 INFO - 15: 0x7f1f668b08d5 - std::sys::unix::thread::Thread::new::thread_start::hd61f7429b3de1d75
[task 2018-11-08T16:04:43.842Z] 16:04:43 INFO - at libstd/sys/unix/thread.rs:90
[task 2018-11-08T16:04:43.842Z] 16:04:43 INFO - 16: 0x7f1f66441b4f - start_thread
[task 2018-11-08T16:04:43.843Z] 16:04:43 INFO - 17: 0x7f1f65f75fbc - clone
| Assignee | ||
Comment 1•7 years ago
|
||
Make sure that clang-format doesn't touch it
Updated•7 years ago
|
Attachment #9023790 -
Attachment description: Bug 1505949 - layout/style/BorrowedTypeList.h content should remain on a single line r?heycam → Bug 1505949 - layout/style/{BorrowedTypeList.h,ServoArcTypeList.h,ServoBoxedTypeList.h} content should remain on a single line r?heycam
Pushed by sledru@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ed063368a801
layout/style/{BorrowedTypeList.h,ServoArcTypeList.h,ServoBoxedTypeList.h} content should remain on a single line r=heycam
Comment 3•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox65:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Comment 4•7 years ago
|
||
[ESR Uplift Approval Request]
If this is not a sec:{high,crit} bug, please state case for ESR consideration: This is required for easier backporting of patches after the reformatting of ESR using clang-format.
User impact if declined: Declining this will negatively impact our developers' ability to easily backport their patches to ESR in the future.
Fix Landed on Version: 65
Risk to taking this patch: Low
Why is the change risky/not risky? (and alternatives if risky): Comment additions only, should not change anything in the binary. Has also been tested in Nightly for a month or so...
String or UUID changes made by this patch: None
Attachment #9030745 -
Flags: approval-mozilla-esr60?
Comment 5•7 years ago
|
||
bindgen errors out with this patch on ESR:
0:05.10 --- stderr
0:05.10 thread '<unnamed>' panicked at 'Unrecognized line in ServoArcTypeList.h: '// clang-format off'', libcore/option.rs:1000:5
We should use .clang-format-ignore instead...
Comment 6•7 years ago
|
||
[ESR Uplift Approval Request]
If this is not a sec:{high,crit} bug, please state case for ESR consideration: See comment 4 please.
User impact if declined:
Fix Landed on Version:
Risk to taking this patch: Low
Why is the change risky/not risky? (and alternatives if risky):
String or UUID changes made by this patch:
Attachment #9030745 -
Attachment is obsolete: true
Attachment #9030745 -
Flags: approval-mozilla-esr60?
Attachment #9030787 -
Flags: review?(sledru)
Attachment #9030787 -
Flags: approval-mozilla-esr60?
| Assignee | ||
Comment 7•7 years ago
|
||
Comment on attachment 9030787 [details] [diff] [review]
ESR patch
Review of attachment 9030787 [details] [diff] [review]:
-----------------------------------------------------------------
thanks!
Attachment #9030787 -
Flags: review?(sledru) → review+
Updated•7 years ago
|
status-firefox-esr60:
--- → affected
Comment 8•7 years ago
|
||
Comment on attachment 9030787 [details] [diff] [review]
ESR patch
OK for uplift to ESR60 as part of the clang-format project.
Attachment #9030787 -
Flags: approval-mozilla-esr60? → approval-mozilla-esr60+
Comment 9•7 years ago
|
||
| bugherder uplift | ||
Updated•4 years ago
|
Product: Firefox Build System → Developer Infrastructure
You need to log in
before you can comment on or make changes to this bug.
Description
•