Bug 1505949 - layout/style/{BorrowedTypeList.h,ServoArcTypeList.h,ServoBoxedTypeList.h}  content should remain on a single line r=heycam

Make sure that clang-format doesn't touch it

Differential Revision: https://phabricator.services.mozilla.com/D11387