layout/style/BorrowedTypeList.h
@@ -28,6 +28,8 @@
 //
 // See the comment at the top of ServoBindingTypes.h for how to use these.
 
+// clang-format off
+// Needs to be a on single line
 GECKO_BORROWED_TYPE(mozilla::dom::Element, RawGeckoElement)
 GECKO_BORROWED_TYPE(nsIDocument, RawGeckoDocument)
 GECKO_BORROWED_TYPE(nsINode, RawGeckoNode)
@@ -50,3 +52,5 @@ GECKO_BORROWED_TYPE_MUT(nsTArray<nsCSSPropertyID>, RawGeckoCSSPropertyIDList)
 GECKO_BORROWED_TYPE_MUT(nsTArray<nsFontFaceRuleContainer>, RawGeckoFontFaceRuleList)
 GECKO_BORROWED_TYPE_MUT(nsTArray<RefPtr<RawServoAnimationValue>>, RawGeckoServoAnimationValueList)
 GECKO_BORROWED_TYPE_MUT(nsTimingFunction, nsTimingFunction)
+// clang-format on
+
