layout/style/ServoBoxedTypeList.h
@@ -24,8 +24,12 @@
 //
 // TODO(heycam): Do some of this automatically.
 
+// clang-format off
+// Needs to be a on single line
 SERVO_BOXED_TYPE(StyleSet, RawServoStyleSet)
 SERVO_BOXED_TYPE(AuthorStyles, RawServoAuthorStyles)
 SERVO_BOXED_TYPE(SelectorList, RawServoSelectorList)
 SERVO_BOXED_TYPE(SourceSizeList, RawServoSourceSizeList)
 SERVO_BOXED_TYPE(UseCounters, StyleUseCounters)
+// clang-format on
+
